templates/gke-fqdn-egress-security/config-connector-workload/verifier-pod.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: v1
kind: Pod
metadata:
  name: egress-verifier
  labels:
    app: egress-test
    project: gcp-template-forge
    template: gke-fqdn-egress-security
spec:
  containers:
  - name: verifier
    image: curlimages/curl:8.4.0
    command: ["/bin/sh", "-c", "sleep 3600"]
  restartPolicy: Never
