templates/gke-fqdn-egress-security/config-connector-workload/network-policy.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  labels:
    project: gcp-template-forge
    template: gke-fqdn-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  # Allow DNS resolution for all pods to enable FQDN resolution
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  # NOTE: This strict policy will block traffic to the Kubernetes API server 
  # by default. For this validation pod, it is acceptable, but real workloads 
  # may need an explicit allow rule for the API server IP/port if they 
  # need to communicate with the cluster control plane.
